--- a/main/index.html
+++ b/main/index.html
@@ -35,11 +35,12 @@
 						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
 					</div>
 					<div class = "right">
-						<h3><b>Vinyasa Yoga</b></h3>
-						<h5><b>Location:</b> Yoga Refuge</h5>
-						<h5><b>Time:</b> Enter Time Here</h5>
-						<h5>Address: 7831 Southeast Stark Street, Portland, OR 97215, United States</h5>
-						<p>Describe the class here. Talk about the music that will be played, your teaching methods, what people can expect, talk about the studio, etc.</p>
+						<h3>Vinyasa Yoga</h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time:</b></p>
+                <p class="lead"><b>Studio:</b></p>
+                <p class="lead"><b>Address:</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
 					</div>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>04.19.2015</span>
@@ -47,10 +48,32 @@
 
 			<div class = "event" data-date = "04/20/2015">
 				<div class = "layout3"> <!-- BEGIN 'LAYOUT3' -->
-					<img src = "images/3.jpg" alt = "image alt"/>
-					<h3>Sunrise Yoga + Vinyasa Flow</h3>
-					<p>Add two pictures here. Put the location, time, address and price in two different rows underneath the corresponding pictures</p>	
+
+				        <div class="row">
+            <div class="col-md-4 portfolio-item">
+                    <img class="img-responsive" src= "" alt="">
+             		<h3>Sunrise Yoga</h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time:</b></p>
+                <p class="lead"><b>Studio:</b></p>
+                <p class="lead"><b>Address:</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                    <img class="img-responsive" src="" alt="">
+                <h3>
+                 Vinyasa Yoga
+                </h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time:</b></p>
+                <p class="lead"><b>Studio:</b></p>
+                <p class="lead"><b>Address:</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+        </div>
 				</div>
+
+
 				<span class = "date"><i class = "icon-calendar"></i>04.20.2015</span>
 			</div>
 
@@ -61,10 +84,11 @@
 					</div>
 					<div class = "right">
 						<h3><b>Sunrise Yoga</b></h3>
-						<h5><b>Location:</b> Vibrant Studios</h5>
-						<h5><b>Time:</b> Enter Time Here</h5>
-						<h5>Address: Enter Address Here</h5>
-						<p>Describe the class here. Talk about the music that will be played, your teaching methods, what people can expect, talk about the studio, etc.</p>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time:</b></p>
+                <p class="lead"><b>Studio:</b></p>
+                <p class="lead"><b>Address:</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
 					</div>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>04.22.2015</span>
@@ -77,10 +101,11 @@
 					</div>
 					<div class = "right">
 						<h3><b>Vinyasa Yoga</b></h3>
-						<h5><b>Location:</b> Yoga Refuge</h5>
-						<h5><b>Time:</b> Enter Time Here</h5>
-						<h5>Address: 7831 Southeast Stark Street, Portland, OR 97215, United States</h5>
-						<p>Describe the class here. Talk about the music that will be played, your teaching methods, what people can expect, talk about the studio, etc.</p>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time:</b></p>
+                <p class="lead"><b>Location:</b></p>
+                <p class="lead"><b>Address:</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
 					</div>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>04.26.2015</span>
