--- a/main/index.html
+++ b/main/index.html
@@ -9,6 +9,11 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
+ <link href="css/half-slider.css" rel="stylesheet">
+
+  <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
 	<script type= "text/javascript">
 	$(document).ready(function(){
 	
@@ -36,34 +41,66 @@
 					</div>
 					<div class = "right">
 						<h3>Vinyasa Yoga</h3>
-                <p class="lead"><b>Date:</b></p>
-                <p class="lead"><b>Time:</b></p>
-                <p class="lead"><b>Location:</b></p>
-                <p class="lead"><b>Address:</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+						<h5><b>Time:</b> 12 pm - 1:15 pm</h5>
+						<h5><b>Location:</b> Yoga Refuge</h5>
+						<h5>Address: 7831 Southeast Stark Street, Portland, OR 97215</h5>
+						<p><b>Description:</b> Describe the class here. Talk about the music that will be played, your teaching methods, what people can expect, talk about the studio, etc.</p>
 					</div>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>04.19.2015</span>
 			</div><!-- END EVENT -->
 
-				<div class = "event" data-date = "04/20/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
-				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
-					<div class = "left">
-						<img src = "https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/11111422_387692868080812_190763671_n.jpg" alt = "image alt"/>
-					</div>
-					<div class = "right">
-						<h3><b>Sunrise Yoga</b></h3>
-                <p class="lead"><b>Date:</b></p>
-                <p class="lead"><b>Time:</b></p>
-                <p class="lead"><b>Location:</b></p>
-                <p class="lead"><b>Address:</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-					</div>
-				</div>
-				<span class = "date"><i class = "icon-calendar"></i>04.22.2015</span>
-			</div><!-- END EVENT -->
+			<div class = "event" data-date = "04/20/2015">
+				<div class = "layout3"> <!-- BEGIN 'LAYOUT3' -->
+<!-- Enter Carousel info here -->
+    <!-- Half Page Image Background Carousel Header -->
+    <header id="myCarousel" class="carousel slide">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for Slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <!-- Set the first background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+                <div class="carousel-caption">
+                    <h2>Caption 1</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+                <div class="carousel-caption">
+                    <h2>Caption 2</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the third background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                <div class="carousel-caption">
+                    <h2>Caption 3</h2>
+                </div>
+            </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="icon-prev"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="icon-next"></span>
+        </a>
+<!-- Stop Carousel info here -->
+
+		</div>
 
 
+				<span class = "date"><i class = "icon-calendar"></i>04.20.2015</span>
+			</div>
 
 				<div class = "event" data-date = "04/22/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
