--- a/main/index.html
+++ b/main/index.html
@@ -46,36 +46,40 @@
 				<span class = "date"><i class = "icon-calendar"></i>04.19.2015</span>
 			</div><!-- END EVENT -->
 
-			<div class = "event" data-date = "04/20/2015">
-				<div class = "layout3"> <!-- BEGIN 'LAYOUT3' -->
+				<div class = "event" data-date = "04/20/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/11111422_387692868080812_190763671_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time:</b></p>
+                <p class="lead"><b>Studio:</b></p>
+                <p class="lead"><b>Address:</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
 
-				        <div class="row">
-            <div class="col-md-4 portfolio-item">
-                    <img class="img-responsive" src= "" alt="">
-             		<h3>Sunrise Yoga</h3>
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Vinyasa Yoga</b></h3>
                 <p class="lead"><b>Date:</b></p>
                 <p class="lead"><b>Time:</b></p>
                 <p class="lead"><b>Studio:</b></p>
                 <p class="lead"><b>Address:</b></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                    <img class="img-responsive" src="" alt="">
-                <h3>
-                 Vinyasa Yoga
-                </h3>
-                <p class="lead"><b>Date:</b></p>
-                <p class="lead"><b>Time:</b></p>
-                <p class="lead"><b>Studio:</b></p>
-                <p class="lead"><b>Address:</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-        </div>
+					</div>
 				</div>
 
 
 				<span class = "date"><i class = "icon-calendar"></i>04.20.2015</span>
-			</div>
+			</div><!-- END EVENT -->
+
+
 
 				<div class = "event" data-date = "04/22/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
@@ -97,7 +101,7 @@
 				<div class = "event" data-date = "04/26/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
 					<div class = "left">
-						<img src = "images/1.jpg" alt = "image alt"/>
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
 					</div>
 					<div class = "right">
 						<h3><b>Vinyasa Yoga</b></h3>
