changed layout on one of dates

--- a/main/index.html
+++ b/main/index.html
@@ -118,8 +118,12 @@
 				<div class = "event" data-date = "04/27/2015">
 				<div class = "layout3"> <!-- BEGIN 'LAYOUT3' -->
 					<img src = "images/3.jpg" alt = "image alt"/>
-					<h3>Sunrise Yoga + Vinyasa Flow</h3>
-					<p>Add two pictures here. Put the location, time, address and price in two different rows underneath the corresponding pictures</p>	
+						<h3><b>Vinyasa Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time:</b></p>
+                <p class="lead"><b>Location:</b></p>
+                <p class="lead"><b>Address:</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>04.27.2015</span>
 			</div>
