--- a/main/index.html
+++ b/main/index.html
@@ -36,11 +36,11 @@
 					</div>
 					<div class = "right">
 						<h3>Vinyasa Yoga</h3>
-                <p class="lead"><b>Date:</b></p>
-                <p class="lead"><b>Time:</b></p>
-                <p class="lead"><b>Studio:</b></p>
-                <p class="lead"><b>Address:</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p class="lead"><b>Date: 04/19/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
 					</div>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>04.19.2015</span>
