updated calendar pics/descriptions

--- a/main/index.html
+++ b/main/index.html
@@ -35,7 +35,7 @@
 						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
 					</div>
 					<div class = "right">
-						<h3>Vinyasa Yoga</h3>
+						<h3>Power Vinyasa Flow</h3>
                 <p class="lead"><b>Date: 04/19/2015</b></p>
                 <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
                 <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
@@ -49,14 +49,14 @@
 				<div class = "event" data-date = "04/20/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
 					<div class = "left">
-						<img src = "https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/11111422_387692868080812_190763671_n.jpg" alt = "image alt"/>
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
 					</div>
 					<div class = "right">
 						<h3><b>Sunrise Yoga</b></h3>
                 <p class="lead"><b>Date:</b></p>
-                <p class="lead"><b>Time:</b></p>
-                <p class="lead"><b>Studio:</b></p>
-                <p class="lead"><b>Address:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
 					</div>
 				</div>
@@ -66,16 +66,14 @@
 						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
 					</div>
 					<div class = "right">
-						<h3><b>Vinyasa Yoga</b></h3>
-                <p class="lead"><b>Date:</b></p>
-                <p class="lead"><b>Time:</b></p>
-                <p class="lead"><b>Studio:</b></p>
-                <p class="lead"><b>Address:</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 04/20/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
 					</div>
 				</div>
-
-
 				<span class = "date"><i class = "icon-calendar"></i>04.20.2015</span>
 			</div><!-- END EVENT -->
 
@@ -84,14 +82,14 @@
 				<div class = "event" data-date = "04/22/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
 					<div class = "left">
-						<img src = "https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/11111422_387692868080812_190763671_n.jpg" alt = "image alt"/>
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
 					</div>
 					<div class = "right">
 						<h3><b>Sunrise Yoga</b></h3>
                 <p class="lead"><b>Date:</b></p>
-                <p class="lead"><b>Time:</b></p>
-                <p class="lead"><b>Studio:</b></p>
-                <p class="lead"><b>Address:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
 					</div>
 				</div>
@@ -104,29 +102,47 @@
 						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
 					</div>
 					<div class = "right">
-						<h3><b>Vinyasa Yoga</b></h3>
-                <p class="lead"><b>Date:</b></p>
-                <p class="lead"><b>Time:</b></p>
-                <p class="lead"><b>Location:</b></p>
-                <p class="lead"><b>Address:</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 04/20/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
 					</div>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>04.26.2015</span>
 			</div><!-- END EVENT -->
 
-				<div class = "event" data-date = "04/27/2015">
-				<div class = "layout3"> <!-- BEGIN 'LAYOUT3' -->
-					<img src = "images/3.jpg" alt = "image alt"/>
-						<h3><b>Vinyasa Yoga</b></h3>
+				<div class = "event" data-date = "04/27/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
                 <p class="lead"><b>Date:</b></p>
-                <p class="lead"><b>Time:</b></p>
-                <p class="lead"><b>Location:</b></p>
-                <p class="lead"><b>Address:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
+
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
+					</div>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>04.27.2015</span>
-			</div>
+			</div><!-- END EVENT -->
 
 				<div class = "event" data-date = "04/29/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
