changes to event dates

--- a/main/index.html
+++ b/main/index.html
@@ -147,14 +147,15 @@
 				<div class = "event" data-date = "04/29/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
 					<div class = "left">
-						<img src = "images/1.jpg" alt = "image alt"/>
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
 					</div>
 					<div class = "right">
 						<h3><b>Sunrise Yoga</b></h3>
-						<h5><b>Location:</b> Vibrant Studios</h5>
-						<h5><b>Time:</b> Enter Time Here</h5>
-						<h5>Address: Enter Address Here</h5>
-						<p>Describe the class here. Talk about the music that will be played, your teaching methods, what people can expect, talk about the studio, etc.</p>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
 					</div>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>04.29.2015</span>
@@ -163,14 +164,15 @@
 				<div class = "event" data-date = "05/03/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
 					<div class = "left">
-						<img src = "images/1.jpg" alt = "image alt"/>
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
 					</div>
 					<div class = "right">
-						<h3><b>Vinyasa Yoga</b></h3>
-						<h5><b>Location:</b> Yoga Refuge</h5>
-						<h5><b>Time:</b> Enter Time Here</h5>
-						<h5>Address: 7831 Southeast Stark Street, Portland, OR 97215, United States</h5>
-						<p>Describe the class here. Talk about the music that will be played, your teaching methods, what people can expect, talk about the studio, etc.</p>
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 05/03/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
 					</div>
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>05.03.2015</span>
