--- a/main/index.html
+++ b/main/index.html
@@ -94,6 +94,8 @@
 				<span class = "date"><i class = "icon-calendar"></i>04.22.2015</span>
 			</div><!-- END EVENT -->
 
+<!-- *******************This is a week**************** -->
+
 				<div class = "event" data-date = "04/26/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
 					<div class = "left">
@@ -159,6 +161,9 @@
 				<span class = "date"><i class = "icon-calendar"></i>04.29.2015</span>
 			</div><!-- END EVENT -->
 
+
+<!-- *******************This is a week**************** -->
+
 				<div class = "event" data-date = "05/03/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
 					<div class = "left">
@@ -175,6 +180,7 @@
 				</div>
 				<span class = "date"><i class = "icon-calendar"></i>05.03.2015</span>
 			</div><!-- END EVENT -->
+
 
 				<div class = "event" data-date = "05/04/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
@@ -225,6 +231,8 @@
 				<span class = "date"><i class = "icon-calendar"></i>05.06.2015</span>
 			</div><!-- END EVENT -->
 
+
+<!-- *******************This is a week**************** -->
 
 				<div class = "event" data-date = "05/10/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
 				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
@@ -427,10 +435,273 @@
 
 <!-- *******************This is a week**************** -->
 
+				<div class = "event" data-date = "05/31/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 05/03/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>05.31.2015</span>
+			</div><!-- END EVENT -->
 
 
+				<div class = "event" data-date = "06/01/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 04/20/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.01.2015</span>
+			</div><!-- END EVENT -->
+
+				<div class = "event" data-date = "06/03/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.03.2015</span>
+			</div><!-- END EVENT -->
+
+<!-- *******************This is a week**************** -->
+
+				<div class = "event" data-date = "06/07/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 05/03/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.07.2015</span>
+			</div><!-- END EVENT -->
 
 
+				<div class = "event" data-date = "06/08/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 04/20/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.08.2015</span>
+			</div><!-- END EVENT -->
+
+				<div class = "event" data-date = "06/10/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.10.2015</span>
+			</div><!-- END EVENT -->
+
+<!-- *******************This is a week**************** -->
+
+				<div class = "event" data-date = "06/14/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 05/03/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.14.2015</span>
+			</div><!-- END EVENT -->
+
+
+				<div class = "event" data-date = "06/15/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 04/20/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.15.2015</span>
+			</div><!-- END EVENT -->
+
+				<div class = "event" data-date = "06/16/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.16.2015</span>
+			</div><!-- END EVENT -->
+
+<!-- *******************This is a week**************** -->
+
+				<div class = "event" data-date = "06/21/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 05/03/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.21.2015</span>
+			</div><!-- END EVENT -->
+
+
+				<div class = "event" data-date = "06/22/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10946581_1526835514272607_70035238_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3>Power Vinyasa Flow</h3>
+                <p class="lead"><b>Date: 04/20/2015</b></p>
+                <p class="lead"><b>Time: 12 pm - 1:15 pm</b></p>
+                <p class="lead"><b> Studio:<a href = "http://www.yogarefugepdx.com/"> Yoga Refuge</a></b></p>
+                <p class="lead"><b>Address: 7831 Southeast Stark Street, Portland, OR 97215</b></p>
+                <p>Write some info about the class here. Type of music played (which playlist?), what people can expect, etc..</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.22.2015</span>
+			</div><!-- END EVENT -->
+
+				<div class = "event" data-date = "06/24/2015"> <!-- BEGIN EVENT. DATE FORMAT - MM/DD/YYYY -->
+				<div class = "layout1"> <!-- BEGIN 'LAYOUT1' -->
+					<div class = "left">
+						<img src = "https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10731458_1483439738606306_1167203609_n.jpg" alt = "image alt"/>
+					</div>
+					<div class = "right">
+						<h3><b>Sunrise Yoga</b></h3>
+                <p class="lead"><b>Date:</b></p>
+                <p class="lead"><b>Time: 7 am - 8 am</b></p>
+                <p class="lead"><b>Studio: <a href= "http://www.vibrantstudiospdx.com/"> Vibrant Studios</a></b></p>
+                <p class="lead"><b>Address: 1532 SW Jefferson St. Portland, OR</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+					</div>
+				</div>
+				<span class = "date"><i class = "icon-calendar"></i>06.24.2015</span>
+			</div><!-- END EVENT -->
+
+<!-- *******************This is a week**************** -->
 
 	</div>
 
